WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
194868
Resolve WebsiteDataStore/HTTPCookieStore ref cycle
https://bugs.webkit.org/show_bug.cgi?id=194868
Summary
Resolve WebsiteDataStore/HTTPCookieStore ref cycle
Alex Christensen
Reported
2019-02-20 13:24:53 PST
Resolve WebsiteDataStore/HTTPCookieStore ref cycle
Attachments
Patch
(10.62 KB, patch)
2019-02-20 13:25 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-02-20 13:25:01 PST
Created
attachment 362532
[details]
Patch
Geoffrey Garen
Comment 2
2019-02-20 13:52:24 PST
Comment on
attachment 362532
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-02-20 14:22:29 PST
Comment on
attachment 362532
[details]
Patch Clearing flags on attachment: 362532 Committed
r241838
: <
https://trac.webkit.org/changeset/241838
>
WebKit Commit Bot
Comment 4
2019-02-20 14:22:30 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-02-20 14:24:47 PST
<
rdar://problem/48251863
>
Alex Christensen
Comment 6
2019-02-20 16:14:00 PST
Reverted in
https://trac.webkit.org/changeset/241850/webkit
The first attempt caused crashes in these API tests: WebKit.CookieObserverCrash WebKit.WKHTTPCookieStoreWithoutProcessPoolWithPrewarming WebKit.WKHTTPCookieStoreWithoutProcessPoolWithoutPrewarming
Alex Christensen
Comment 7
2019-02-20 16:14:14 PST
Reopening
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug