Source/WebKit/UIProcess/API/APIHTTPCookieStore.h
@@ -74,6 +74,9 @@ public:
     void cookiesDidChange();
     void cookieManagerDestroyed();
 
+    void ref() const;
+    void deref() const;
+    
 private:
     HTTPCookieStore(WebKit::WebsiteDataStore&);
 
@@ -87,8 +90,7 @@ private:
     void startObservingChangesToDefaultUIProcessCookieStore(Function<void()>&&);
     void stopObservingChangesToDefaultUIProcessCookieStore();
     
-    // FIXME: This is a reference cycle.
-    Ref<WebKit::WebsiteDataStore> m_owningDataStore;
+    WebKit::WebsiteDataStore& m_owningDataStore;
     HashSet<Observer*> m_observers;
 
     WebKit::WebCookieManagerProxy* m_observedCookieManagerProxy { nullptr };
